Fixes scrollbar on homepage

--- a/sites/all/themes/heardmentalitylight/stylesheets/layout.css
+++ b/sites/all/themes/heardmentalitylight/stylesheets/layout.css
@@ -2053,7 +2053,7 @@ textarea#q_quest  {
     border: 2px solid red;
 }
 .container .nine .grey-box .uactivity {
-    height: 795px;
+    height: 495px;
 	overflow: auto;
 	overflow-y: auto;
 	overflow-x: hidden;
